--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,45 @@
+/* Custom Fonts */
+@font-face {
+	font-family: 'IBM Plex Sans Regular';
+	font-style: normal;
+	font-weight: normal;
+	src: local('IBM Plex Sans Regular'),
+		url('./fonts/IBMPlexSans/IBMPlexSans-Regular.ttf') format('truetype');
+}
+
+/* Custom Fonts */
+@font-face {
+	font-family: 'IBM Plex Sans Medium';
+	font-style: normal;
+	font-weight: normal;
+	src: local('IBM Plex Sans Medium'),
+		url('./fonts/IBMPlexSans/IBMPlexSans-Medium.ttf') format('truetype');
+}
+
+/* Custom Fonts */
+@font-face {
+	font-family: 'IBM Plex Sans Bold';
+	font-style: normal;
+	font-weight: normal;
+	src: local('IBM Plex Sans Bold'),
+		url('./fonts/IBMPlexSans/IBMPlexSans-Bold.ttf') format('truetype');
+}
+
+a {
+	text-decoration: none;
+}
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	box-sizing: border-box;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+		'Helvetica Neue', sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
 }
